overflow fix: non-fullscreen

--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -29,16 +29,33 @@ board h2, p {
     transform: translate(-50%, -50%);
     width: 9%;
     height: 12%;
-    padding: 3%;
+    padding: 2%;
     border-radius: 10px;
     background-color: #BBB7A3;
     transition: .5s;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 1.5%;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+    background-color: #767162;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    background-color: #262726ad;
 }
 
 .settings-open {
     z-index: 5;
-    width: 50%;
-    height: 80%;
+    width: 55%;
+    height: 85%;
     border: 4px solid #262726;
     border-radius: 4px;
 }
@@ -49,7 +66,7 @@ board h2, p {
     justify-content: space-evenly;
     align-items: center;
     height: 9%;
-    width: 80%;
+    width: 85%;
     background-color: #767162;
     position: relative;
     left: 50%;
@@ -80,7 +97,7 @@ board h2, p {
     position: relative;
     left: 50%;
     margin-top: 2%;
-    width: 80%;
+    width: 85%;
     transform: translateX(-50%);
     border: 4px solid #262726;
     border-radius: 4px;
@@ -141,7 +158,7 @@ board h2, p {
     position: relative;
     left: 50%;
     margin-top: 2%;
-    width: 80%;
+    width: 85%;
     transform: translateX(-50%);
     border: 4px solid #262726;
     border-radius: 4px;
